# perturbgate-perturbseq

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  NOTICE  README.md  SOURCE_SNAPSHOT.md  pyproject.toml
configs/: demo.yaml  full.yaml  reproduce.yaml
data/: README.md  public_data_manifest.tsv
docs/: ANALYSIS_CONTRACT.md  CLAIMS_AND_EVIDENCE.md  CLAUDE_USAGE.md  DATA_AVAILABILITY.md  DATA_LICENSES.md  DECISION_TRAIL.md  DEMO_SCRIPT.md  EXTERNAL_CONCORDANCE_GSE160097.md  EXTERNAL_EVIDENCE_SUMMARY.md  FAILURE_MODES.md  FIGURE_LEGENDS.md  HACKATHON_SUBMISSION.md  LIMITATIONS.md  MACOS_QUICKSTART.md  MANUSCRIPT_ROADMAP.md  METHODS.md  OPEN_DATA_STATEMENT.md  REPORTING_CHECKLIST.md  REPRODUCIBILITY.md  REPRODUCIBILITY_LEVELS.md  RESULTS.md  RICTOR_ORIGIN_AND_DECISION_PATH.md  SUPERSEDED_RESULTS.md  TECHNICAL_NOTE.md  TRANSLATIONAL_AUDIT_UPDATE.md  TRANSLATIONAL_CONTEXT.md  TRANSLATIONAL_REVIEW_STATUS.md
reports/: perturbgate_explorer.html  targetgate_explorer.html
scripts/: build_attrition_tables.py  build_claim_ledger.py  build_curated_frozen.py  build_explorer.py  build_public_inputs.py  build_robustness_tracks.py  build_translational.py  check_references.py  denominator_audit.py  download_open_data.py  make_figures.py  public_readiness_audit.py  run_demo.py  run_full_pipeline.py  run_reproduction.py  verify_results.py
tests/: test_attrition_counts.py  test_decision_gate.py  test_demo_pipeline.py  test_donor_pairing.py  test_external_gse160097.py  test_figure_source_provenance.py  test_frozen_results.py  test_gene_axis_alignment.py  test_io.py  (+5 more)
(+87 files in other folders)
