[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "targetgate"
version = "1.0.0"
description = "Evidence-gated pipeline for T-cell Perturb-seq mechanism hypotheses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Margarita Soloshenko" }]
keywords = ["perturb-seq", "single-cell", "drug-target", "T-cell", "reproducibility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "matplotlib>=3.8,<4",
  "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "pre-commit>=3.5",
]

[project.scripts]
targetgate = "targetgate.cli:main"

[project.urls]
Homepage = "https://github.com/OWNER/targetgate-perturbseq"
Documentation = "https://github.com/OWNER/targetgate-perturbseq/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/targetgate"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# E501: long lines are fine; B008: FastAPI-style default calls not used here;
# E702: compact `ax.set(...)` semicolons in plotting code are intentional.
ignore = ["E501", "B008", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
